# bfm-copilot

./: .dockerignore  .env.local.example  .eslintrc.json  .gitignore  BFM Labs Clarity Calculator - Calculator.csv  BFM Labs Clarity Calculator - Ominous Markers.csv  BFM Labs Clarity Calculator - Reference Values.csv  BFM-Case-Study-Grading-Workbook.xlsx  BFM-Grading-Sheet.docx  BFM-Grading-Sheet.xlsx  BFM_Frequency_Mapping_Master.xlsx  Dockerfile  README.md  compose.yaml  docker-compose.yml  eslint.config.mjs  export_treatment_contacts.py  next.config.js  openai-docs.md  package-lock.json  package.json  railway.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  whop-integration.md
python-agent/: .env.example  Dockerfile  Dockerfile.bak  README.md  pyproject.toml
python-agent/agent-assets/master-protocols/: 02-hrv-brainwave-mapping.md  03-dpulse-organ-mapping.md  04-lab-diagnostic-mapping.md  06-five-levers.md  09-contraindications.md  10-clinical-decision-rules.md
python-agent/app/: __init__.py  config.py  main.py
python-agent/app/agent/: __init__.py  eval_agent.py  runner.py  streaming.py  system_prompts.py  (+1 more)
python-agent/scripts/: convert_master_xlsx.py  index_docs.py  ingest_assets.py  ingest_eval_corrections_pdf.py  ingest_eval_reports.py  ingest_eval_review.py  ingest_eval_training.py  ingest_hrv_data.py  ingest_jack_kruse_notes.py  ingest_master_protocols.py  ingest_presentations.py  reembed_all_chunks.py  run_all_case_study_evals.py  test_rag.py
python-agent/tests/: test_eval_agent.py  test_normalize_bundle.py  test_protocol_engine.py
(+644 files in other folders)
